crates/otio-capi/include/otio.h


typedef enum OtioStatus {
    OTIO_STATUS_OK = 0,
    OTIO_STATUS_NULL_POINTER = 1,
    OTIO_STATUS_INVALID_UTF8 = 2,
    OTIO_STATUS_NO_VALUE = 3,
    OTIO_STATUS_STALE_HANDLE = 4,
    OTIO_STATUS_INVALID_ARGUMENT = 5,
    OTIO_STATUS_CORE_ERROR = 6,
    OTIO_STATUS_TIME_ERROR = 7,
    OTIO_STATUS_PARSE_ERROR = 8,
    OTIO_STATUS_UNSUPPORTED = 9,
    OTIO_STATUS_IO_ERROR = 10,
    OTIO_STATUS_PANIC = 11
} OtioStatus;
typedef struct OtioBuffer {
    char *data;
    size_t len;
} OtioBuffer;
typedef struct OtioRationalTime {
    double value;
    double rate;
} OtioRationalTime;
typedef struct OtioTimeRange {
    OtioRationalTime start_time;
    OtioRationalTime duration;
} OtioTimeRange;
typedef struct OtioTimeTransform {
    OtioRationalTime offset;
    double scale;
    double rate;
} OtioTimeTransform;
typedef struct OtioColor {
    double r;
    double g;
    double b;
    double a;
} OtioColor;
typedef struct OtioV2d {
    double x;
    double y;
} OtioV2d;
typedef struct OtioBox2d {
    OtioV2d min;
    OtioV2d max;
} OtioBox2d;
typedef struct OtioDocument OtioDocument;
typedef struct OtioNode {
    uint32_t index;
    uint32_t generation;
} OtioNode;
typedef enum OtioNodeKind {
    OTIO_NODE_KIND_ITEM = 0,
    OTIO_NODE_KIND_CLIP = 1,
    OTIO_NODE_KIND_GAP = 2,
    OTIO_NODE_KIND_TRACK = 3,
    OTIO_NODE_KIND_STACK = 4,
    OTIO_NODE_KIND_TIMELINE = 5,
    OTIO_NODE_KIND_TRANSITION = 6,
    OTIO_NODE_KIND_MARKER = 7,
    OTIO_NODE_KIND_EFFECT = 8,
    OTIO_NODE_KIND_TIME_EFFECT = 9,
    OTIO_NODE_KIND_LINEAR_TIME_WARP = 10,
    OTIO_NODE_KIND_FREEZE_FRAME = 11,
    OTIO_NODE_KIND_EXTERNAL_REFERENCE = 12,
    OTIO_NODE_KIND_MISSING_REFERENCE = 13,
    OTIO_NODE_KIND_GENERATOR_REFERENCE = 14,
    OTIO_NODE_KIND_IMAGE_SEQUENCE_REFERENCE = 15,
    OTIO_NODE_KIND_SERIALIZABLE_COLLECTION = 16,
    OTIO_NODE_KIND_SERIALIZABLE_OBJECT = 17,
    OTIO_NODE_KIND_SERIALIZABLE_OBJECT_WITH_METADATA = 18,
    OTIO_NODE_KIND_COMPOSABLE = 19,
    OTIO_NODE_KIND_COMPOSITION = 20,
    OTIO_NODE_KIND_MEDIA_REFERENCE = 21,
    OTIO_NODE_KIND_UNKNOWN_SCHEMA = 22,
    OTIO_NODE_KIND_OTHER = 23
} OtioNodeKind;
typedef enum OtioValueKind {
    OTIO_VALUE_NULL = 0,
    OTIO_VALUE_BOOL = 1,
    OTIO_VALUE_INT = 2,
    OTIO_VALUE_UINT = 3,
    OTIO_VALUE_DOUBLE = 4,
    OTIO_VALUE_STRING = 5,
    OTIO_VALUE_RATIONAL_TIME = 6,
    OTIO_VALUE_TIME_RANGE = 7,
    OTIO_VALUE_TIME_TRANSFORM = 8,
    OTIO_VALUE_COLOR = 9,
    OTIO_VALUE_V2D = 10,
    OTIO_VALUE_BOX2D = 11,
    OTIO_VALUE_VECTOR = 12,
    OTIO_VALUE_DICTIONARY = 13,
    OTIO_VALUE_OBJECT = 14,
    OTIO_VALUE_OTHER = 15
} OtioValueKind;
OtioNode otio_node_none(void);
bool otio_node_is_none(OtioNode node);
bool otio_node_equal(OtioNode left, OtioNode right);
OtioStatus otio_node_to_json(
    const OtioDocument *source,
    OtioNode node,
    size_t indent,
    OtioBuffer *out_json);
OtioStatus otio_missing_reference_new(
    OtioDocument *target,
    const char *name,
    OtioNode *out_node);
OtioStatus otio_node_kind(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioNodeKind *out_kind);
OtioStatus otio_node_schema_name(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_name);
OtioStatus otio_node_schema_version(
    const OtioDocument *source,
    OtioNode node_handle,
    uint32_t *out_version);
OtioStatus otio_node_name(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_name);
OtioStatus otio_node_set_name(
    OtioDocument *target,
    OtioNode node_handle,
    const char *name);
OtioStatus otio_node_parent(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioNode *out_parent);
OtioStatus otio_node_overlapping(
    const OtioDocument *source,
    OtioNode node_handle,
    bool *out_overlapping);
OtioStatus otio_media_reference_available_range(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_media_reference_set_available_range(
    OtioDocument *target,
    OtioNode node_handle,
    OtioTimeRange range);
OtioStatus otio_media_reference_clear_available_range(
    OtioDocument *target,
    OtioNode node_handle);
OtioStatus otio_media_reference_available_image_bounds(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBox2d *out_bounds);
OtioStatus otio_media_reference_set_available_image_bounds(
    OtioDocument *target,
    OtioNode node_handle,
    OtioBox2d bounds);
OtioStatus otio_media_reference_clear_available_image_bounds(
    OtioDocument *target,
    OtioNode node_handle);
OtioStatus otio_metadata_kind(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioValueKind *out_kind);
OtioStatus otio_metadata_contains(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    bool *out_contains);
OtioStatus otio_metadata_len(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    size_t *out_len);
OtioStatus otio_metadata_key_at(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    size_t index,
    OtioBuffer *out_key);
OtioStatus otio_metadata_get_bool(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    bool *out_value);
OtioStatus otio_metadata_get_int(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    int64_t *out_value);
OtioStatus otio_metadata_get_uint(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    uint64_t *out_value);
OtioStatus otio_metadata_get_double(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    double *out_value);
OtioStatus otio_metadata_get_rational_time(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioRationalTime *out_value);
OtioStatus otio_metadata_get_time_range(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioTimeRange *out_value);
OtioStatus otio_metadata_get_time_transform(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioTimeTransform *out_value);
OtioStatus otio_metadata_get_v2d(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioV2d *out_value);
OtioStatus otio_metadata_get_box2d(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioBox2d *out_value);
OtioStatus otio_metadata_get_object(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioNode *out_value);
OtioStatus otio_metadata_get_string(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioBuffer *out_value);
OtioStatus otio_metadata_get_color(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioColor *out_value,
    OtioBuffer *out_name);
OtioStatus otio_metadata_set_bool(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    bool value);
OtioStatus otio_metadata_set_int(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    int64_t value);
OtioStatus otio_metadata_set_uint(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    uint64_t value);
OtioStatus otio_metadata_set_double(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    double value);
OtioStatus otio_metadata_set_rational_time(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioRationalTime value);
OtioStatus otio_metadata_set_time_range(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioTimeRange value);
OtioStatus otio_metadata_set_time_transform(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioTimeTransform value);
OtioStatus otio_metadata_set_v2d(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioV2d value);
OtioStatus otio_metadata_set_box2d(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioBox2d value);
OtioStatus otio_metadata_set_object(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioNode value);
OtioStatus otio_metadata_set_string(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    const char *value);
OtioStatus otio_metadata_set_color(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioColor value,
    const char *name);
OtioStatus otio_metadata_set_null(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path);
OtioStatus otio_metadata_set_dictionary(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path);
OtioStatus otio_metadata_set_vector(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    size_t len);
OtioStatus otio_metadata_remove(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path);
OtioStatus otio_metadata_clear(OtioDocument *target, OtioNode node_handle);
OtioStatus otio_node_child_count(
    const OtioDocument *source,
    OtioNode parent,
    size_t *out_count);
OtioStatus otio_node_child_at(
    const OtioDocument *source,
    OtioNode parent,
    size_t index,
    OtioNode *out_child);
OtioStatus otio_node_children(
    const OtioDocument *source,
    OtioNode parent,
    OtioNode *out_nodes,
    size_t capacity,
    size_t *out_count);
OtioStatus otio_node_highest_ancestor(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioNode *out_ancestor);
OtioStatus otio_node_find_clips(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioNode *out_nodes,
    size_t capacity,
    size_t *out_count);
OtioStatus otio_node_transformed_time(
    const OtioDocument *source,
    OtioRationalTime time,
    OtioNode from,
    OtioNode to,
    OtioRationalTime *out_time);
OtioStatus otio_node_transformed_time_range(
    const OtioDocument *source,
    OtioTimeRange range,
    OtioNode from,
    OtioNode to,
    OtioTimeRange *out_range);