sdk/csharp/OpenTimelineIO/Interop.cs


    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_media_reference_available_image_bounds(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioBox2d outBounds);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_media_reference_available_range(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioTimeRange outRange);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_media_reference_clear_available_image_bounds(IntPtr target, Native.OtioNode nodeHandle);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_media_reference_clear_available_range(IntPtr target, Native.OtioNode nodeHandle);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_media_reference_set_available_image_bounds(IntPtr target, Native.OtioNode nodeHandle, Native.OtioBox2d bounds);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_media_reference_set_available_range(IntPtr target, Native.OtioNode nodeHandle, Native.OtioTimeRange range);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_clear(IntPtr target, Native.OtioNode nodeHandle);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_contains(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out byte outContains);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_get_bool(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out byte outValue);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_get_box2d(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out Native.OtioBox2d outValue);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_get_color(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out Native.OtioColor outValue, out Native.OtioBuffer outName);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_get_double(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out double outValue);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_get_int(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out long outValue);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_get_object(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out Native.OtioNode outValue);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_get_rational_time(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out Native.OtioRationalTime outValue);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_get_string(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out Native.OtioBuffer outValue);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_get_time_range(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out Native.OtioTimeRange outValue);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_get_time_transform(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out Native.OtioTimeTransform outValue);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_get_uint(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out ulong outValue);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_get_v2d(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out Native.OtioV2d outValue);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_key_at(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, nuint index, out Native.OtioBuffer outKey);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_kind(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out ValueKind outKind);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_len(IntPtr source, Native.OtioNode nodeHandle, IntPtr path, out nuint outLen);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_remove(IntPtr target, Native.OtioNode nodeHandle, IntPtr path);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_bool(IntPtr target, Native.OtioNode nodeHandle, IntPtr path, byte value);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_box2d(IntPtr target, Native.OtioNode nodeHandle, IntPtr path, Native.OtioBox2d value);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_color(IntPtr target, Native.OtioNode nodeHandle, IntPtr path, Native.OtioColor value, IntPtr name);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_dictionary(IntPtr target, Native.OtioNode nodeHandle, IntPtr path);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_double(IntPtr target, Native.OtioNode nodeHandle, IntPtr path, double value);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_int(IntPtr target, Native.OtioNode nodeHandle, IntPtr path, long value);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_null(IntPtr target, Native.OtioNode nodeHandle, IntPtr path);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_object(IntPtr target, Native.OtioNode nodeHandle, IntPtr path, Native.OtioNode value);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_rational_time(IntPtr target, Native.OtioNode nodeHandle, IntPtr path, Native.OtioRationalTime value);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_string(IntPtr target, Native.OtioNode nodeHandle, IntPtr path, IntPtr value);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_time_range(IntPtr target, Native.OtioNode nodeHandle, IntPtr path, Native.OtioTimeRange value);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_time_transform(IntPtr target, Native.OtioNode nodeHandle, IntPtr path, Native.OtioTimeTransform value);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_uint(IntPtr target, Native.OtioNode nodeHandle, IntPtr path, ulong value);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_v2d(IntPtr target, Native.OtioNode nodeHandle, IntPtr path, Native.OtioV2d value);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_metadata_set_vector(IntPtr target, Native.OtioNode nodeHandle, IntPtr path, nuint len);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_missing_reference_new(IntPtr target, IntPtr name, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_child_at(IntPtr source, Native.OtioNode parent, nuint index, out Native.OtioNode outChild);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_child_count(IntPtr source, Native.OtioNode parent, out nuint outCount);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_children(IntPtr source, Native.OtioNode parent, [In, Out] Native.OtioNode[]? outNodes, nuint capacity, out nuint outCount);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_node_equal(Native.OtioNode left, Native.OtioNode right);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_find_clips(IntPtr source, Native.OtioNode nodeHandle, [In, Out] Native.OtioNode[]? outNodes, nuint capacity, out nuint outCount);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_highest_ancestor(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioNode outAncestor);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_node_is_none(Native.OtioNode node);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_kind(IntPtr source, Native.OtioNode nodeHandle, out NodeKind outKind);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_name(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioBuffer outName);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioNode otio_node_none();

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_overlapping(IntPtr source, Native.OtioNode nodeHandle, out byte outOverlapping);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_parent(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioNode outParent);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_schema_name(IntPtr source, Native.OtioNode nodeHandle, out Native.OtioBuffer outName);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_schema_version(IntPtr source, Native.OtioNode nodeHandle, out uint outVersion);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_set_name(IntPtr target, Native.OtioNode nodeHandle, IntPtr name);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_to_json(IntPtr source, Native.OtioNode node, nuint indent, out Native.OtioBuffer outJson);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_transformed_time(IntPtr source, Native.OtioRationalTime time, Native.OtioNode from, Native.OtioNode to, out Native.OtioRationalTime outTime);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_transformed_time_range(IntPtr source, Native.OtioTimeRange range, Native.OtioNode from, Native.OtioNode to, out Native.OtioTimeRange outRange);
